Countries part and Solutions Page

--- a/src/Components/Home/Hero/Hero.css
+++ b/src/Components/Home/Hero/Hero.css
@@ -6,7 +6,7 @@
     width: 100%;
     min-height: 70vh;
     position: relative;
-    padding: 70px;
+    padding-top: 90px;
     padding-bottom: 30px;
     display: flex;
     align-items: center;
