--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -109,6 +109,7 @@ a:hover {
   padding: 0;
 }
 
+
 .navmenu ul {
   margin: 0;
   padding: 0;
@@ -226,6 +227,13 @@ a:hover {
   transition: color 0.3s;
 }
 
+
+
+.countries{
+  margin-left: 5% ;
+  padding-top: 10px;
+}
+
 .navmenu {
   padding: 0;
   z-index: 9997;
@@ -341,4 +349,34 @@ a:hover {
 }
 .no-bullets {
   list-style-type: none;
+}
+
+/* Add this to your CSS */
+
+.scrollable-menu {
+  height: auto;
+  max-height: 360px; 
+  overflow-y: auto; 
+  overflow-x: hidden;
+}
+
+
+.scrollable-menu li {
+  display: block;
+}
+
+.scrollable-menu li a {
+  padding: 10px;
+}
+
+.scrollable-menu li:hover {
+  background-color: #f5f5f5;
+}
+
+.flag{
+  width: 20%;
+}
+
+.arrow{
+  padding-top: 4%;
 }
