--- a/src/Components/Solutions/Solutions.css
+++ b/src/Components/Solutions/Solutions.css
@@ -1,7 +1,4 @@
-
-
 .hero1 {
-
   width: 100%;
   min-height: 70vh;
   position: relative;
@@ -11,39 +8,28 @@
   border-bottom: 2px solid rgba(var(--accent-color-rgb), 0.25);
 }
 
-
-.rowmargin{
-  height:  85%;
+.rowmargin {
+  height: 85%;
   padding-bottom: 5%;
   padding-top: 3%;
 }
 
-.cardSize{
-  height:78px;
-  background-color: rgba(0, 0, 0, 0.052);
+.cardSize {
+  height: 70px;
 }
 
-.txts{
-  font-size: large;
-  font: bold;
-  font-weight: 500;
-}
-
-/* 
 .crd {
-  box-shadow:8px 4px 8px rgb(255, 255, 255);
-  transition: box-shadow 0.3s ease-in-out;
-} */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  opacity:calc(0.9);
+  
+}
 
 .crd:hover {
-  
-  box-shadow: 7px 8px rgba(36, 34, 34, 0.818);
-  transition: box-shadow 0.3s ease-in-out;
+  transform: translateY(-7px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  opacity:calc(1);
 }
-
-
-
-
 
 #topic {
   text-align: center;
@@ -54,18 +40,24 @@
 
 @media (max-width: 425px) {
   #topic {
-      font-size: 15px;
+    font-size: 15px;
   }
 }
 
 @media (max-width: 375px) {
   #topic {
-      font-size: 15px;
+    font-size: 15px;
   }
 }
 
 @media (max-width: 768px) {
   #topic {
-      font-size: 21px;
+    font-size: 21px;
   }
+}
+
+.txts{
+  font-size: large;
+  font: bold;
+  font-weight: 500;
 }
