--- a/src/Components/Events&News/UpcomingNews/UpcomingNews.css
+++ b/src/Components/Events&News/UpcomingNews/UpcomingNews.css
@@ -1,47 +1,50 @@
-.cards{
+.cards {
     padding-top: 2%;
-    
+
 }
 
-/* Add this style to your Events.css file */
+/* Add this style to your UpcomingNews.css file */
 .red-background {
     background-color: red;
 }
 
-.crd{
-   
+.crd {
+
     margin-top: 7px;
 }
 
-.card1{
+.card1 {
     background-color: #01066B;
     padding: 2px;
-    
+
 }
 
-.textclr{
+.textclr {
     color: white;
 }
 
 .small-title {
-    font-size: 16px; /* Adjust font size as needed */
-    line-height: 1.2; /* Adjust line height as needed */
+    font-size: 16px;
+    /* Adjust font size as needed */
+    line-height: 1.2;
+    /* Adjust line height as needed */
 }
 
 .card-img-top {
-    border-radius: 5px; /* Optional: Added border radius to the image */
+    border-radius: 5px;
+    /* Optional: Added border radius to the image */
 }
 
-.playicon{
-    font-size:xx-large;
+.playicon {
+    font-size: xx-large;
     padding: 15px;
     color: #01066B !important;
-   
-   
+
+
 }
 
-.playicon:hover{
-    font-size:xx-large;
+.playicon:hover {
+    font-size: xx-large;
     padding: 15px;
     color: #ffffff !important;
 }
@@ -63,7 +66,8 @@
 .fa-play.bttn {
     font-size: 2.3rem;
 }
-/* Events.css */
+
+/* UpcomingNews.css */
 
 .crd {
     overflow: hidden;
@@ -82,48 +86,48 @@
     text-decoration: none;
 }
 
-#EventsText {
+#UpcomingNewsText {
     text-align: center;
     font-size: 40px;
     color: white;
     opacity: 0.9;
 }
 
-.text{
+.text {
     padding-top: 2%;
 }
 
-.modalClr{
+.modalClr {
     background-color: #2b2d6366 !important;
 }
 
-.close{
+.close {
     background-color: #ffffff !important;
 }
 
 @media (max-width: 425px) {
-    #EventsText {
+    #UpcomingNewsText {
         font-size: 15px;
     }
 }
 
 @media (max-width: 375px) {
-    #EventsText {
+    #UpcomingNewsText {
         font-size: 15px;
     }
 }
 
 @media (max-width: 768px) {
-    #EventsText {
+    #UpcomingNewsText {
         font-size: 21px;
     }
 
-    .subTopin{
+    .subTopin {
         font-size: 10px;
     }
 }
 
-.subTopin{
+.subTopin {
     font-size: 30px;
     color: rgb(158, 165, 226);
 }
