--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -25,6 +25,10 @@
     #Text {
         font-size: 21px;
     }
+
+}
+.raw{
+    margin-top: 10px;
 }
 
 #Text {
@@ -41,5 +45,61 @@
 }
 
 .inputField{
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
+    margin-top: 10%;
 }
+
+.h1{
+    font-size: 60px !important;
+    color: aqua!important;
+}
+
+.h2{
+    color: white!important;
+    text-align: justify!important;   
+}
+
+.tikBox{
+    color: white;
+}
+
+.formcheck{
+    margin-top: 20px;
+}
+
+.countryData{
+    margin-top: 4% !important;
+    color: white;
+}
+.countryName{
+    font-size: 50px;
+}
+
+.callIcon3{
+    margin-top: 3%;
+    margin-right: 23px; 
+    color: white;
+  }
+
+  .img3{
+    margin-right: 28px;
+    color: white;
+  }
+
+  .address3{
+    /* margin-left: 1%; */
+    padding-top: 2px;
+  }
+
+  .address{
+    margin-left: 40px;
+  }
+
+  .txt{
+    margin-top: 30px;
+    font-style: oblique;
+  }
+
+  .txtarea{
+    height: 70px !important;
+  }
