--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -98,8 +98,54 @@
   .txt{
     margin-top: 30px;
     font-style: oblique;
+    font: bold
   }
 
   .txtarea{
     height: 70px !important;
   }
+
+  .line{
+    width: 50%;
+  }
+
+  .row2{
+    background-color: rgba(66, 66, 66, 0.41);
+    padding-left: 4%;
+    border-radius: 40px;
+    margin-bottom: 4%;
+    margin-top: 4% !important;
+  }
+
+
+/* GetDirectionsButton.css */
+
+.neon-button {
+    background-color: #000;
+    color: #00ffff; /* Neon blue color */
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.8); /* Neon glow effect */
+    width: 200px;
+    margin-left: 3px;
+    margin-top: 13px !important;
+  }
+  
+  .neon-button:hover {
+    box-shadow: 0 0 20px rgba(0, 255, 255, 1); /* Increased glow on hover */
+  }
+  
+  .is-invalid {
+    border: 2px solid red;
+}
+
+.text-danger {
+    color: red;
+    font-size: 0.875em;
+    margin-top: 0.25em;
+}
