--- a/src/Components/Solutions/solutionVendors/CyberSecurity/CyberSecurity.css
+++ b/src/Components/Solutions/solutionVendors/CyberSecurity/CyberSecurity.css
@@ -5,3 +5,16 @@
 .headingrow{
     padding-top: 5%;
 }
+
+.modelHeader {
+    background-color: #01066B;
+    color: white;
+}
+
+.websiteButton {
+    width: 30% !important;
+}
+
+.btnBody{
+    text-align: center;
+}
