--- a/src/Components/Solutions/solutionVendors/Perimia/Perimia.css
+++ b/src/Components/Solutions/solutionVendors/Perimia/Perimia.css
@@ -1,7 +1,20 @@
-.vendorTitel{
+.vendorTitel {
     text-align: center;
 }
 
-.headingrow{
+.headingrow {
     padding-top: 5%;
+}
+
+.modelHeader {
+    background-color: #01066B;
+    color: white;
+}
+
+.websiteButton {
+    width: 30% !important;
+}
+
+.btnBody{
+    text-align: center;
 }
