--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -175,6 +175,7 @@
   .imageMap {
     margin-bottom: 40px;
     margin-left: 10%;
+    
   }
   
   .text{
@@ -277,7 +278,6 @@
     width: 370px !important;
     margin-left: -75px;
   }
-
 }
 
 /* ////////////////// */
@@ -454,7 +454,9 @@ button {
 }
 
 .imageMap {
-  margin-bottom: 40px;
+  margin-bottom: 2px;
+  background-color: #01476f1c;
+  padding: 20px;
 }
 
 .classss{
