--- a/src/Components/Home/Who_we_are/Whoweare.css
+++ b/src/Components/Home/Who_we_are/Whoweare.css
@@ -216,3 +216,8 @@ hr {
 .whotextRow {
     margin-bottom: 5%;
 }
+
+.h3{
+    /* margin-bottom: 40px !important; */
+    font-size: 40px !important;
+}
