--- a/src/Components/ContactUs/Contact.css
+++ b/src/Components/ContactUs/Contact.css
@@ -1,14 +1,16 @@
 .spacer {
-    width: 10px; /* Adjust this value as needed */
+    width: 10px;
+    /* Adjust this value as needed */
 }
 
-#floatingTextarea2{
+#floatingTextarea2 {
     height: 200px;
 }
 
-.btnContainer{
+.btnContainer {
     text-align: center;
 }
+
 @media (max-width: 425px) {
     #Text {
         font-size: 15px;
@@ -26,8 +28,22 @@
         font-size: 21px;
     }
 
+    .mapSL {
+        /* margin-left: 30% !important; */
+    }
+
+    .countryData {
+        /* margin-left: 25% !important; */
+        text-align: center;
+
+    }
+
+    .line {
+        width: 350px;
+    }
 }
-.raw{
+
+.raw {
     margin-top: 10px;
 }
 
@@ -38,91 +54,93 @@
     opacity: 0.9;
 }
 
-.frame{
+.frame {
     width: 100%;
     height: 100%;
     border-radius: 3%;
 }
 
-.inputField{
+.inputField {
     /* margin-bottom: 10%; */
     margin-top: 10%;
 }
 
-.h1{
+.h1 {
     font-size: 60px !important;
-    color: aqua!important;
+    color: aqua !important;
 }
 
-.h2{
-    color: white!important;
-    text-align: justify!important;   
+.h2 {
+    color: white !important;
+    text-align: justify !important;
 }
 
-.tikBox{
+.tikBox {
     color: white;
 }
 
-.formcheck{
+.formcheck {
     margin-top: 20px;
 }
 
-.countryData{
+.countryData {
     margin-top: 4% !important;
     color: white;
 }
-.countryName{
+
+.countryName {
     font-size: 50px;
 }
 
-.callIcon3{
+.callIcon3 {
     margin-top: 3%;
-    margin-right: 23px; 
+    margin-right: 23px;
     color: white;
-  }
+}
 
-  .img3{
+.img3 {
     margin-right: 28px;
     color: white;
-  }
+}
 
-  .address3{
+.address3 {
     /* margin-left: 1%; */
     padding-top: 2px;
-  }
+}
 
-  .address{
+.address {
     margin-left: 40px;
-  }
+}
 
-  .txt1{
+.txt1 {
     margin-top: 30px;
     font-style: oblique;
     font: bold
-  }
+}
 
-  .txtarea{
+.txtarea {
     height: 70px !important;
-  }
+}
 
-  .line{
+.line {
     width: 50%;
-  }
+}
 
-  .row2{
+.row2 {
     background-color: rgba(66, 66, 66, 0.41);
     padding-left: 4%;
     border-radius: 40px;
     margin-bottom: 4%;
     margin-top: 4% !important;
-  }
+}
 
 
 /* GetDirectionsButton.css */
 
 .neon-button {
     background-color: #000;
-    color: #00ffff; /* Neon blue color */
+    color: #00ffff;
+    /* Neon blue color */
     border: none;
     padding: 12px 20px;
     font-size: 16px;
@@ -130,17 +148,19 @@
     border-radius: 5px;
     text-transform: uppercase;
     cursor: pointer;
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.8); /* Neon glow effect */
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.8);
+    /* Neon glow effect */
     width: 200px;
     margin-left: 3px;
     margin-top: 13px !important;
-  }
-  
-  .neon-button:hover {
-    box-shadow: 0 0 20px rgba(0, 255, 255, 1); /* Increased glow on hover */
-  }
-  
-  .is-invalid {
+}
+
+.neon-button:hover {
+    box-shadow: 0 0 20px rgba(0, 255, 255, 1);
+    /* Increased glow on hover */
+}
+
+.is-invalid {
     border: 2px solid red;
 }
 
@@ -148,4 +168,12 @@
     color: red;
     font-size: 0.875em;
     margin-top: 0.25em;
+}
+
+.mapSL{
+    width: 230px;
+    margin-left: 100px;
+}
+.line{
+    display: none;
 }
