--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -351,6 +351,10 @@ a:hover {
   list-style-type: none;
 }
 
+.arrow1{
+  margin-right: 1px !important;
+}
+
 /* Add this to your CSS */
 
 .scrollable-menu {
@@ -377,3 +381,14 @@ a:hover {
   width: 20%;
 }
 
+.flagNavbar{
+  margin-left: 1px;
+}
+
+.arrow{
+  margin-left: -27px !important;
+}
+
+.arrow1{
+ margin-right: -20px;
+}
