--- a/src/Components/ChatBot/Chat.css
+++ b/src/Components/ChatBot/Chat.css
@@ -149,7 +149,13 @@
 
 @media (max-width: 640px) {
     .online-dot {
-        bottom: 14%;
-        right: 6%;
+        bottom: 10%;
+        right: 6.5%;
+    }
+
+    .custom-chatbot .rsc-container {
+        width: 300px;
+        height: 500px;
+        border-radius: 10px;
     }
 }
