--- a/src/Components/Solutions/Solutions.css
+++ b/src/Components/Solutions/Solutions.css
@@ -22,6 +22,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   opacity:calc(0.9);
+  padding-bottom: 5%;
   
 }
 
@@ -32,7 +33,7 @@
 }
 
 .datacenter{
-  height: 207px;
+  height: 206px;
 }
 
 
@@ -58,6 +59,12 @@
 @media (max-width: 768px) {
   #topic {
     font-size: 21px;
+  } 
+}
+
+@media(max-width: 650px){
+  .datacenter{
+    height: 125px;
   }
 }
 
