--- a/src/Components/Home/Who_we_are/Whoweare.css
+++ b/src/Components/Home/Who_we_are/Whoweare.css
@@ -79,6 +79,10 @@ hr {
     font-weight: bold;
 }
 
+.textarea{
+    margin-top: 10px;
+}
+
 /* Model */
 .disModel {
     background-color: rgba(108, 204, 204, 0.2);
