--- a/src/Components/Solutions/Solutions.css
+++ b/src/Components/Solutions/Solutions.css
@@ -22,7 +22,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   opacity:calc(0.9);
-  padding-bottom: 5%;
+  
   
 }
 
@@ -65,6 +65,10 @@
 @media(max-width: 650px){
   .datacenter{
     height: 125px;
+  }
+
+  .crd{
+    padding-bottom: 5%;
   }
 }
 
