Loaded from database

--- a/src/Components/Home/LatestEvents/Latest.css
+++ b/src/Components/Home/LatestEvents/Latest.css
@@ -29,23 +29,23 @@
 
 .cardContainer1 {
     width: 100%;
-    border-radius: 5%;
+    border-radius: 10%;
     background-color: #01066B !important;
-    
+
 }
 
 .cardContainer2 {
-    
+
     border-radius: 5%;
     background-color: #01066B !important;
     margin-bottom: 2px;
 }
 
-.image1{
+.image1 {
     height: 330px;
 }
 
-.image2{
+.image2 {
     height: 150px;
 }
 
@@ -64,38 +64,39 @@
     padding: 1.25% !important;
 }
 
-.headingRow{
+.headingRow {
     margin-bottom: 2%;
 }
 
-.navigation{
+.navigation {
     /* background-color: #01066B; */
     margin-left: 2%;
     margin-bottom: 1%;
     border-radius: 15px;
-    height:96%;
+    height: 96%;
     text-align: center;
 }
 
-.backgrnd{
+.backgrnd {
     background-color: rgba(255, 255, 255, 0.205);
-    padding: 2%  ;
-    padding-bottom: 1%  !important;
+    padding: 2%;
+    padding-bottom: 1% !important;
     border-radius: 41px;
 }
 
-.iconsss{
+.iconsss {
     /* background-color: aliceblue  !important; */
     color: white !important;
-    height:100%;
+    height: 100%;
     width: 80px;
     background-color: #01066B;
 }
 
-.iconsss:hover{
+.iconsss:hover {
     background-color: #02098e !important;
     transition: 1s;
 }
 
-
-
+.AltText{
+    color: aliceblue;
+}
