--- a/src/Components/Portal/Portal.css
+++ b/src/Components/Portal/Portal.css
@@ -1,17 +1,65 @@
-.portal{
-    /* background-color: rgb(255, 255, 255); */
-    padding: 7%;
-    margin-top: 6%;
-    margin-bottom: 6%;
-    font:bold;
+.vendorNameSingle{
+    /* margin-top: 50px !important; */
+    padding-top: 50px;
+    padding-bottom: 30px;
+    color: white;
+    
+}
+.vendorpic1{
+    width: 100%;
+    padding: 10px;
+}
+.websiteButton {
+    width: 10% !important;
     text-align: center;
-    font-size: 60px;
+    border-radius: 5px;  
+    background-color: rgb(153, 137, 255);
 }
 
-.one{
-color: rgb(103, 173, 211);
+.imgbgrd{
+    background-color: aliceblue;
+    border-radius: 5px;
+    
 }
 
-.two{
-color: green;
+.bton{
+    text-align: right;
+    margin-bottom: 10px;
+   
+    
+}
+
+.imgcolmn{
+    background-color: rgba(235, 255, 255, 0.789);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.contentVendor{
+    display: block;
+    text-align: justify;
+    background-color: rgba(224, 237, 248, 0.105);
+    padding: 15px;
+    margin-bottom: 30px;
+    margin-top: 50px !important;
+    border-radius: 5px;
+    color: aliceblue;
+}
+
+.sectionVendor{
+    background-color: rgba(188, 255, 233, 0.104);
+    /* padding: 10px; */
+    margin: 50px;
+    border-radius: 10px;
+    border-color: rgb(17, 52, 105) !important;
+    border-width: 10px;
+}
+
+.contentVendor1{
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
+    text-align: justify;
+    padding-bottom: 50px;
+    color: aliceblue;
+    padding-top: 40px;
 }
