--- a/src/Components/SingleVendor/SVendor.css
+++ b/src/Components/SingleVendor/SVendor.css
@@ -9,6 +9,9 @@
     width: 100%;
     padding: 10px;
 }
+
+
+
 .websiteButton {
     width: 10% !important;
     text-align: center;
@@ -19,6 +22,24 @@
     padding: 5px;
     font-size: 18px;
 }
+
+/* Media query for mobile views */
+@media (max-width: 768px) {
+    .websiteButton {
+        width: 45% !important; /* Increase the width for mobile view */
+    }
+
+    .imgbgrd{
+        width: 150px !important;
+    }
+
+    .vendorpic1{
+        width: 100%;
+    }
+
+    
+}
+
 
 .imgbgrd{
     background-color: aliceblue;
