--- a/src/Components/Events&News/Events.css
+++ b/src/Components/Events&News/Events.css
@@ -1,22 +1,19 @@
 .cards {
     padding-top: 2%;
-
 }
 
-/* Add this style to your Events.css file */
 .red-background {
     background-color: red;
 }
 
 .crd {
-
     margin-top: 7px;
+    margin-bottom: 15px; /* Add some bottom margin for spacing */
 }
 
 .card1 {
     background-color: #01066B;
     padding: 2px;
-    width: 400px;
 }
 
 .textclr {
@@ -25,22 +22,19 @@
 
 .small-title {
     font-size: 16px;
-    /* Adjust font size as needed */
     line-height: 1.2;
-    /* Adjust line height as needed */
 }
 
 .card-img-top {
     border-radius: 5px;
-    /* Optional: Added border radius to the image */
+    width: 100%;
+    height: auto;
 }
 
 .playicon {
     font-size: xx-large;
     padding: 15px;
     color: #01066B !important;
-
-
 }
 
 .playicon:hover {
@@ -51,14 +45,12 @@
 
 .centered {
     background-color: white;
-    /* padding: 15px; */
     border-radius: 15px;
     align-items: center;
 }
 
 .centered:hover {
     background-color: #01066B;
-    /* padding: 15px; */
     border-radius: 15px;
     align-items: center;
 }
@@ -66,8 +58,6 @@
 .fa-play.bttn {
     font-size: 2.3rem;
 }
-
-/* Events.css */
 
 .crd {
     overflow: hidden;
@@ -122,24 +112,33 @@
         font-size: 21px;
     }
 
-    .subTopin {
+    .iframenews{
+        height: 260px !important;
+    }
+
+    /* .subTopin {
         font-size: 10px;
     }
 
     .card1{
-        width: 355px;
-    }
+        width: 100%;
+    } */
 }
 
 @media (max-width: 1440px) {
     .card1 {
         background-color: #01066B;
         padding: 2px;
-        width: 350px;
+        width: 100%;
     }
 }
 
 .subTopin {
     font-size: 30px;
     color: rgb(158, 165, 226);
+}
+
+.iframenews{
+    width: 100%;
+    height: 520px;
 }
