--- a/src/Components/SingleVendor/SVendor.css
+++ b/src/Components/SingleVendor/SVendor.css
@@ -12,8 +12,8 @@
 
 
 
-.websiteButton {
-    width: 10% !important;
+.websiteButton1 {
+   width: 100px !important;
     text-align: center;
     border-radius: 5px;  
     background-color: rgb(255, 255, 255);
@@ -23,9 +23,10 @@
     font-size: 18px;
 }
 
+
 /* Media query for mobile views */
 @media (max-width: 768px) {
-    .websiteButton {
+    .websiteButton1 {
         width: 45% !important; /* Increase the width for mobile view */
     }
 
@@ -36,7 +37,6 @@
     .vendorpic1{
         width: 100%;
     }
-
     
 }
 
@@ -51,6 +51,7 @@
 .bton{
     text-align: right;
     margin-bottom: 10px;
+  
 }
 
 .imgcolmn{
