--- a/src/Components/Solutions/solutionVendors/Microsoft/Microsoft.css
+++ b/src/Components/Solutions/solutionVendors/Microsoft/Microsoft.css
@@ -12,6 +12,7 @@
 .AuthText{
     color: #00A3FF;
     padding-top: 60px;
+    font-size: 170%;
 }
 
 .descontainer{
@@ -40,4 +41,14 @@
 .unlisted{
     text-decoration: none;
     color: white;
+}
+
+.websiteButtonmic{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    color: black;
+    margin: 1px;
 }
