--- a/src/Components/Solutions/Solutions.css
+++ b/src/Components/Solutions/Solutions.css
@@ -178,3 +178,17 @@
 
 
 
+/* Styles for devices with a max-width of 1024px */
+@media (max-width: 1024px) {
+  .crd {
+    padding-bottom: 6%;
+  }
+
+  .datacenter {
+    height: 147px;
+  }
+
+  .card-img-top.endpoint {
+    height: 265px; /* Adjust this height as needed */
+  }
+}
